--- a/manifests/components/ldap.yaml
+++ b/manifests/components/ldap.yaml
@@ -56,7 +56,7 @@ application:
                     jcloudsNodeNamePrefix: ldap
                     vmIdentity: ec2-user
                     imageId: us-east-1/ami-d41689bd
-                    ec2SecurityGroup: default
+                    securityGroup: default
                     providerSettings:
                       userData: "#!/bin/bash\nmkdir -p /etc/chef/ohai/hints\ntouch /etc/chef/ohai/hints/ec2.json"
                   output:
