--- a/manifests/main.yaml
+++ b/manifests/main.yaml
@@ -78,6 +78,7 @@ application:
           admin_sonar_username: "publish-signal(string)"
           admin_sonar_password: "publish-signal(string)"
 
+
     sonar:
       type: reference.Submodule
       configuration:
@@ -358,13 +359,14 @@ application:
                         roles: [ jenkins ]
                         recipeUrl: "{$.cookbooks_url}"
                         runList:
+                          - "recipe[cicd_infrastructure::integration_jenkins_description]"
                           - "recipe[cicd_infrastructure::integration_jenkins_gerrit]"
                           - "recipe[cicd_infrastructure::integration_jenkins_selenium]"
+                          - "recipe[cicd_infrastructure::integration_jenkins_sonar]"
                           - "recipe[cicd_infrastructure::integration_jenkins_jira]"
                           - "recipe[cicd_infrastructure::integration_jenkins_nexus]"
                           - "recipe[cicd_infrastructure::integration_jenkins_qubell]"
-                          - "recipe[cicd_infrastructure::integration_jenkins_sonar]"
-                          - "recipe[cicd_infrastructure::integration_jenkins_description]"
+                          - "recipe[cicd_infrastructure::integration_jenkins_mail]"
                         version: "11.8.2"
                         jattrs:
                           cicd_infrastructure:
@@ -389,23 +391,28 @@ application:
                                 username: "{$.environment.properties.jira_username}"
                                 password: "{$.environment.properties.jira_password}"
 
+
                               sonar:
                                 host: "{$.environment.sonar.sonar_public_ips[0]}"
-                                username: "{$.environment.properties.sonar_username}"
-                                password: "{$.environment.properties.sonar_username}"
+                                username: "{$.environment.properties.jenkins_sonar_username}"
+                                password: "{$.environment.properties.jenkins_sonar_password}"
 
                       output:
                         jenkins_host_state: chefState
 
-                  - gerrit_projects_setup:
-                      phase: gerrit_projects_setup
+
+                  - gerrit_setup:
+                      phase: gerrit_setup
                       precedingPhases: [ init_component_vms ]
                       action: chefsolo
                       parameters:
                         roles: [ gerrit ]
                         recipeUrl: "{$.cookbooks_url}"
-                        runList: [ "recipe[cicd_infrastructure::integration_gerrit_projects]" ]
+                        runList:
+                          - "recipe[cicd_infrastructure::integration_gerrit_projects]"
+                          - "recipe[cicd_infrastructure::integration_gerrit_mail]"
                         version: "11.8.2"
+
 
                   - gerrit_jenkins:
                       phase: gerrit_setup
@@ -451,6 +458,7 @@ application:
                               jira:
                                 host: "{$.environment.jira.jira_public_ips[0]}"
 
+
                   - sonar_setup:
                       precedingPhases: [ init_component_vms ]
                       action: chefsolo
@@ -465,6 +473,8 @@ application:
                               credentials:
                                 username: "{$.environment.properties.admin_sonar_username}"
                                 password: "{$.environment.properties.admin_sonar_password}"
+
+
 
                   - gerrit_ldap:
                       phase: ldap_integration
