--- a/manifests/main.yaml
+++ b/manifests/main.yaml
@@ -411,6 +411,7 @@ application:
                         runList:
                           - "recipe[cicd_infrastructure::integration_gerrit_projects]"
                           - "recipe[cicd_infrastructure::integration_gerrit_mail]"
+                          - "recipe[cicd_infrastructure::integration_gerrit_gitweb]"
                         version: "11.8.2"
 
 
