Switch to ami-642bba0d. Use CentOS 6.4 with cloud-init and resizable root partition

--- a/manifests/components/gerrit.yaml
+++ b/manifests/components/gerrit.yaml
@@ -12,10 +12,12 @@ application:
   configuration:
     input.gerrit_version: "2.9"
     input.cookbooks_url: "http://gd-asf.s3.amazonaws.com/cookbooks.tar.gz"
+    input.storage_size: 10
   interfaces:
     input:
       gerrit_version: "bind(workflow#input.gerrit_version)"
       cookbooks_url: "bind(workflow#input.cookbooks_url)"
+      storage_size: "bind(workflow#input.storage_size)"
     output:
       gerrit_public_ips: "bind(workflow#result.gerrit_public_ips)"
       gerrit_endpoint: "bind(workflow#result.gerrit_endpoint)"
@@ -24,6 +26,9 @@ application:
       type: workflow.Instance
       interfaces:
         input:
+          storage_size:
+            type: configuration(int)
+            name: Storage size
           gerrit_version:
             type: configuration(string)
             name: Gerrit version
@@ -56,10 +61,14 @@ application:
                     jcloudsRegions: us-east-1
                     jcloudsNodeNamePrefix: gerrit
                     vmIdentity: ec2-user
-                    imageId: us-east-1/ami-c25be3aa
+                    imageId: us-east-1/ami-642bba0d
                     securityGroup: default
                     providerSettings:
                       userData: "#!/bin/bash\nmkdir -p /etc/chef/ohai/hints\ntouch /etc/chef/ohai/hints/ec2.json"
+                    blockDeviceMapping:
+                      "/dev/sda1":
+                        ebs:
+                          volumeSize: "{$.storage_size}"
                   output:
                     gerrit_public_ips: ips
                     private_ips: privateips
