--- a/manifests/components/ldap.yaml
+++ b/manifests/components/ldap.yaml
@@ -11,9 +11,11 @@
 application:
   configuration:
     input.cookbooks_url: "http://gd-asf.s3.amazonaws.com/cookbooks.tar.gz"
+    input.storage_size: 10
   interfaces:
     input:
       cookbooks_url: "bind(workflow#input.cookbooks_url)"
+      storage_size: "bind(workflow#input.storage_size)"
     output:
       ldap_public_ips: "bind(workflow#result.ldap_public_ips)"
       ldap_endpoint: "bind(workflow#result.ldap_endpoint)"
@@ -26,6 +28,9 @@ application:
           cookbooks_url:
             type: configuration(string)
             name: Cookbooks tarball URL
+          storage_size:
+            type: configuration(int)
+            name: Storage size
         result:
           ldap_public_ips:
             type: publish-signal(list<string>)
@@ -55,10 +60,14 @@ application:
                     jcloudsRegions: us-east-1
                     jcloudsNodeNamePrefix: ldap
                     vmIdentity: ec2-user
-                    imageId: us-east-1/ami-c25be3aa
+                    imageId: us-east-1/ami-642bba0d
                     securityGroup: default
                     providerSettings:
                       userData: "#!/bin/bash\nmkdir -p /etc/chef/ohai/hints\ntouch /etc/chef/ohai/hints/ec2.json"
+                    blockDeviceMapping:
+                      "/dev/sda1":
+                        ebs:
+                          volumeSize: "{$.storage_size}"
                   output:
                     ldap_public_ips: ips
                     private_ips: privateips
