--- a/manifests/components/nexus.yaml
+++ b/manifests/components/nexus.yaml
@@ -11,9 +11,11 @@
 application:
   configuration:
     input.cookbooks_url: "http://gd-asf.s3.amazonaws.com/cookbooks.tar.gz"
+    input.storage_size: 10
   interfaces:
     input:
       cookbooks_url: "bind(workflow#input.cookbooks_url)"
+      storage_size: "bind(workflow#input.storage_size)"
     output:
       nexus_public_ips: "bind(workflow#result.nexus_public_ips)"
       nexus_endpoint: "bind(workflow#result.nexus_endpoint)"
@@ -22,6 +24,9 @@ application:
       type: workflow.Instance
       interfaces:
         input:
+          storage_size:
+            type: configuration(int)
+            name: Storage size
           cookbooks_url:
             type: configuration(string)
             name: Cookbooks tarball URL
@@ -52,10 +57,14 @@ application:
                     jcloudsRegions: us-east-1
                     jcloudsNodeNamePrefix: nexus
                     vmIdentity: ec2-user
-                    imageId: us-east-1/ami-c25be3aa
+                    imageId: us-east-1/ami-642bba0d
                     securityGroup: default
                     providerSettings:
                       userData: "#!/bin/bash\nmkdir -p /etc/chef/ohai/hints\ntouch /etc/chef/ohai/hints/ec2.json"
+                    blockDeviceMapping:
+                      "/dev/sda1":
+                        ebs:
+                          volumeSize: "{$.storage_size}"
                   output:
                     nexus_public_ips: ips
                     private_ips: privateips
