--- a/manifests/components/sonar.yaml
+++ b/manifests/components/sonar.yaml
@@ -10,10 +10,12 @@
 
 application:
   configuration:
+    input.storage_size: 10
     input.sonar_version: "3.7.4"
     input.cookbooks_url: "http://gd-asf.s3.amazonaws.com/cookbooks.tar.gz"
   interfaces:
     input:
+      storage_size: "bind(workflow#input.storage_size)"
       sonar_version: "bind(workflow#input.sonar_version)"
       cookbooks_url: "bind(workflow#input.cookbooks_url)"
     output:
@@ -24,6 +26,9 @@ application:
       type: workflow.Instance
       interfaces:
         input:
+          storage_size:
+            type: configuration(int)
+            name: Storage size
           sonar_version:
             type: configuration(string)
             name: Sonar version
@@ -56,10 +61,14 @@ application:
                     jcloudsRegions: us-east-1
                     jcloudsNodeNamePrefix: sonar
                     vmIdentity: ec2-user
-                    imageId: us-east-1/ami-c25be3aa
+                    imageId: us-east-1/ami-642bba0d
                     securityGroup: default
                     providerSettings:
                       userData: "#!/bin/bash\nmkdir -p /etc/chef/ohai/hints\ntouch /etc/chef/ohai/hints/ec2.json"
+                    blockDeviceMapping:
+                      "/dev/sda1":
+                        ebs:
+                          volumeSize: "{$.storage_size}"
                   output:
                     sonar_public_ips: ips
                     private_ips: privateips
