--- a/manifests/components/docker-vm.yaml
+++ b/manifests/components/docker-vm.yaml
@@ -1,7 +1,7 @@
 # Encoding: utf-8
 #
 # Application: Agile Software Factory
-# Component: Shipyard
+# Component: DockerVM
 #
 # Copyright (c) 2015 Grid Dynamics International, Inc. All Rights Reserved
 # Classification level: Public
@@ -16,7 +16,7 @@ application:
       "*": "bind(workflow#input.*)"
     result:
       "*": "bind(workflow#result.*)"
-    shipyard-actions:
+    docker-vm-actions:
       "*": "bind(workflow#actions.*)"
     docker-registry:
       "*": "bind(workflow#registry.*)"
@@ -35,7 +35,7 @@ application:
             type: "receive-command(string pubkey, string user)"
             name: "Add Public Key"
         result:
-          shipyard_public_ips:
+          docker-vm_public_ips:
             type: "publish-signal(list<string>)"
             name: "Docker IP"
           docker_endpoints:
@@ -60,14 +60,14 @@ application:
                   action: provisionVms
                   precedingPhases: [ "env-props" ]
                   parameters:
-                    roleName: shipyard
+                    roleName: docker-vm
                     hardwareId: m1.small
                     quantity: 1
                     retryCount: 1
                     jcloudsProvider: aws-ec2
                     jcloudsEndpoint: https://ec2.us-east-1.amazonaws.com
                     jcloudsRegions: us-east-1
-                    jcloudsNodeNamePrefix: shipyard
+                    jcloudsNodeNamePrefix: docker-vm
                     vmIdentity: core
                     imageId: us-east-1/ami-5e9bd836
                     ec2SecurityGroup: default
@@ -100,11 +100,11 @@ application:
                         ebs:
                           volumeSize: "{$.storage_size}"
                   output:
-                    shipyard_public_ips: ips
+                    docker-vm_public_ips: ips
                     private_ips: privateips
             return:
-              shipyard_public_ips:
-                value: "{$.shipyard_public_ips}"
+              docker-vm_public_ips:
+                value: "{$.docker-vm_public_ips}"
               docker_endpoints:
                 value: "tcp://{$.private_ips}:2376"
 
@@ -120,7 +120,7 @@ application:
               - registration:
                   action: "execrun"
                   parameters:
-                    roles: [ "shipyard" ]
+                    roles: [ "docker-vm" ]
                     isSudo: true
                     command:
                       - |
