[DMG-619] Fix headers

--- a/manifests/components/docker-pool.yaml
+++ b/manifests/components/docker-pool.yaml
@@ -1,7 +1,7 @@
 # Encoding: utf-8
 #
 # Application: Agile Software Factory
-# Component: docker_pool
+# Component: Docker Pool
 #
 # Copyright (c) 2015 Grid Dynamics International, Inc. All Rights Reserved
 # Classification level: Public
