--- a/manifests/main.yaml
+++ b/manifests/main.yaml
@@ -1,7 +1,7 @@
 # Encoding: utf-8
 #
 # Application: Agile Software Factory
-# Component: Main
+# Component: Agile Software Factory
 #
 # Copyright (c) 2014 Grid Dynamics International, Inc. All Rights Reserved
 # Classification level: Public
